--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,328 +1,446 @@
 .batLogo {
-	height: 50px;
-	width: 50px;
-	background-image: url("/assets/images/Badge_2_ans_72px.png");
-	background-size: cover;
-	background-position: center;
+  height: 50px;
+  width: 50px;
+  background-image: url("/assets/images/Badge_2_ans_72px.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .batLogo:hover {
-	background-image: url("/assets/images/Iconsmind-Outline-Bat.ico");
-	height: 50px;
-	width: 50px;
-	transform: rotate(90deg);
+  background-image: url("/assets/images/Iconsmind-Outline-Bat.ico");
+  height: 50px;
+  width: 50px;
+  transform: rotate(90deg);
+}
+
+nav {
+  background-color: gold;
+  height: 80px;
+  position: sticky;
+  top: 0;
 }
 
 ul {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: row;
-	gap: 30px;
-	background-color: gold;
-	height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 30px;
+  height: 80px;
 }
 
 .logoDev {
-	height: 80px;
-	width: 80px;
-	position: fixed;
-	right: 95%;
+  height: 80px;
+  width: 80px;
+  position: fixed;
+}
+
+.toggleBtn {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-right: 10px;
+  margin-top: 5px;
+  cursor: pointer;
+  top: 1%;
+  display: none;
+}
+
+.toggleBtn span {
+  height: 3px;
+  background-color: black;
+  width: 100%;
+  position: absolute;
+  top: 20px;
+  left: 0;
+}
+
+.toggleBtn span:before {
+  content: "";
+  height: 3px;
+  background-color: black;
+  width: 100%;
+  position: absolute;
+  top: -10px;
+  left: 0;
+}
+
+.toggleBtn span:after {
+  content: "";
+  height: 3px;
+  background-color: black;
+  width: 100%;
+  position: absolute;
+  top: 10px;
+  left: 0;
 }
 
 .parcours {
-	height: 90vh;
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-direction: column;
-	gap: 50px;
-	padding-left: 250px;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 50px;
+  padding-left: 250px;
 }
 .parcours h1 {
-	font-size: 3rem;
+  font-size: 3rem;
 }
 .parcours p {
-	font-size: 2rem;
+  font-size: 2rem;
 }
 
 .laser {
-	width: 80vw;
-	border: gold 2px solid;
-	border-radius: 20%;
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	box-shadow: 0 0 8px black, inset 0 0 8px black, 0 0 16px gold,
-		inset 0 0 16px gold, 0 0 32px gold, inset 0 0 32px gold;
-	animation: flashing 1s infinite alternate;
+  width: 80vw;
+  border: gold 2px solid;
+  border-radius: 20%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 0 8px black, inset 0 0 8px black, 0 0 16px gold, inset 0 0 16px gold, 0 0 32px gold, inset 0 0 32px gold;
+  animation: flashing 1s infinite alternate;
 }
 
 @keyframes flashing {
-	0%,
-	18%,
-	21%,
-	32%,
-	35%,
-	39%,
-	42%,
-	100% {
-		box-shadow: 10 10 8px black, inset 0 0 8px black, 0 0 32px gold,
-			inset 0 0 32px gold, 0 0 64px gold, inset 0 0 64px gold;
-	}
-	20%,
-	34%,
-	41% {
-		box-shadow: none;
-	}
+  0%, 18%, 21%, 32%, 35%, 39%, 42%, 100% {
+    box-shadow: 10 10 8px black, inset 0 0 8px black, 0 0 32px gold, inset 0 0 32px gold, 0 0 64px gold, inset 0 0 64px gold;
+  }
+  20%, 34%, 41% {
+    box-shadow: none;
+  }
 }
 * {
-	/* HTML5 display-role reset for older browsers */
+  /* HTML5 display-role reset for older browsers */
 }
-* html,
-* body,
-* div,
-* span,
-* applet,
-* object,
-* iframe,
-* h1,
-* h2,
-* h3,
-* h4,
-* h5,
-* h6,
-* p,
-* blockquote,
-* pre,
-* a,
-* abbr,
-* acronym,
-* address,
-* big,
-* cite,
-* code,
-* del,
-* dfn,
-* em,
-* img,
-* ins,
-* kbd,
-* q,
-* s,
-* samp,
-* small,
-* strike,
-* strong,
-* sub,
-* sup,
-* tt,
-* var,
-* b,
-* u,
-* i,
-* center,
-* dl,
-* dt,
-* dd,
-* ol,
-* ul,
-* li,
-* fieldset,
-* form,
-* label,
-* legend,
-* table,
-* caption,
-* tbody,
-* tfoot,
-* thead,
-* tr,
-* th,
-* td,
-* article,
-* aside,
-* canvas,
-* details,
-* embed,
-* figure,
-* figcaption,
-* footer,
-* header,
-* hgroup,
-* menu,
-* nav,
-* output,
-* ruby,
-* section,
-* summary,
-* time,
-* mark,
-* audio,
-* video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	text-decoration: none;
-	color: white;
+* html, * body, * div, * span, * applet, * object, * iframe,
+* h1, * h2, * h3, * h4, * h5, * h6, * p, * blockquote, * pre,
+* a, * abbr, * acronym, * address, * big, * cite, * code,
+* del, * dfn, * em, * img, * ins, * kbd, * q, * s, * samp,
+* small, * strike, * strong, * sub, * sup, * tt, * var,
+* b, * u, * i, * center,
+* dl, * dt, * dd, * ol, * ul, * li,
+* fieldset, * form, * label, * legend,
+* table, * caption, * tbody, * tfoot, * thead, * tr, * th, * td,
+* article, * aside, * canvas, * details, * embed,
+* figure, * figcaption, * footer, * header, * hgroup,
+* menu, * nav, * output, * ruby, * section, * summary,
+* time, * mark, * audio, * video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-decoration: none;
+  color: white;
 }
-* article,
-* aside,
-* details,
-* figcaption,
-* figure,
-* footer,
-* header,
-* hgroup,
-* menu,
-* nav,
-* section {
-	display: block;
+* article, * aside, * details, * figcaption, * figure,
+* footer, * header, * hgroup, * menu, * nav, * section {
+  display: block;
 }
 * body {
-	line-height: 1;
-	overflow-x: hidden;
+  line-height: 1;
+  overflow-x: hidden;
 }
-* ol,
-* ul {
-	list-style: none;
+* ol, * ul {
+  list-style: none;
 }
-* blockquote,
-* q {
-	quotes: none;
+* blockquote, * q {
+  quotes: none;
 }
-* blockquote:before,
-* blockquote:after,
-* q:before,
-* q:after {
-	content: "";
-	content: none;
+* blockquote:before, * blockquote:after,
+* q:before, * q:after {
+  content: "";
+  content: none;
 }
 * table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 @font-face {
-	font-family: "batman";
-	src: url("/assets/fonts/batmfa__.ttf");
+  font-family: "batman";
+  src: url("/assets/fonts/batmfa__.ttf");
 }
 @font-face {
-	font-family: "popins";
-	src: url("/assets/fonts/Poppins-SemiBold.ttf");
+  font-family: "popins";
+  src: url("/assets/fonts/Poppins-SemiBold.ttf");
 }
 body {
-	background-color: black;
-	font-family: "Poppins", sans-serif;
+  background-color: black;
+  font-family: "popins";
 }
 
-h1,
-h2,
-h3 {
-	font-family: "batman";
+h1, h2, h3 {
+  font-family: "batman";
 }
 
 h2 {
-	font-size: 2rem;
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 #profil {
-	position: relative;
-	left: 50%;
-	transform: translatex(-50%);
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-direction: column;
-	gap: 50px;
-	width: 70vw;
-	padding: 200px 0 200px 0px;
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 50px;
+  width: 70vw;
+  padding: 200px 0 200px 0px;
 }
 #profil div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: row;
-	gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
 }
 
 .profilAnim {
-	animation-name: profil;
-	animation-duration: 5s;
+  animation-name: profil;
+  animation-duration: 5s;
 }
 
 @keyframes profil {
-	from {
-		left: -50%;
-	}
-	to {
-		left: 50%;
-	}
+  from {
+    left: -50%;
+  }
+  to {
+    left: 50%;
+  }
 }
 #xp {
-	width: 70vw;
-	padding: 200px 0 200px 0;
-	position: relative;
-	left: 50%;
-	transform: translatex(-50%);
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
-	flex-direction: column;
-	gap: 50px;
+  width: 70vw;
+  padding: 200px 0 200px 0;
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 50px;
 }
 #xp div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: row;
-	gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
 }
 
 #outils {
-	padding: 200px 0 200px 0px;
-	position: relative;
-	left: 50%;
-	transform: translatex(-50%);
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-direction: column;
-	gap: 100px;
-	width: 70vw;
+  padding: 200px 0 200px 0px;
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 100px;
+  width: 70vw;
 }
 
 .languages {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: row;
-	gap: 50px;
-	position: relative;
-	left: 50%;
-	transform: translatex(-50%);
-	border: 2px solid #ffffff;
-	border-radius: 4rem;
-	padding: 50px;
-	width: auto;
-	background-color: #e3e3e3;
-	font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 50px;
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  border: 2px solid #ffffff;
+  border-radius: 4rem;
+  padding: 50px;
+  width: auto;
+  background-color: #e3e3e3;
+  font-weight: bold;
 }
-
 .languages a {
-	color: #232323;
+  color: #232323;
 }
-
-.languages a:nth-child(2n + 1):hover {
-	color: gold;
-	scale: 1.2;
-	transition: 0.35s;
+.languages a:nth-child(2n+1):hover {
+  color: gold;
+  scale: 1.2;
+  transition: 0.35s;
 }
 .languages a:hover {
-	color: #7d2323;
-	scale: 1.2;
-	transition: 0.35s;
+  color: #7d2323;
+  scale: 1.2;
+  transition: 0.35s;
+}
+
+#realisations {
+  padding: 200px 0 200px 0px;
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 100px;
+  width: 70vw;
+}
+
+#showReal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#showReal img {
+  height: 180px;
+  width: 360px;
+}
+
+.article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 500px;
+  gap: 10px;
+  border: 2px solid #7d2323;
+  margin: 25px;
+  padding: 25px;
+  border-radius: 6px;
+  box-shadow: 2px 2px 16px 2px #7d2323;
+}
+
+.git {
+  height: 50px;
+  width: 50px;
+  background-image: url("/assets/images/Badge_2_ans_72px.png");
+  background-size: cover;
+  background-position: center;
+}
+
+#contact {
+  padding: 200px 0 200px 0px;
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 100px;
+  width: 70vw;
+}
+
+.contactDiv {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 50px;
+}
+.contactDiv div {
+  font-size: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+@media screen and (max-width: 1000px) {
+  .contactDiv div {
+    display: block;
+  }
+}
+@media screen and (max-width: 800px) {
+  .languages {
+    flex-direction: column;
+  }
+  .parcours {
+    padding-left: 10px;
+  }
+  .owl-stage-outer {
+    display: none;
+  }
+}
+@media screen and (max-width: 700px) {
+  .toggleBtn {
+    display: block;
+    cursor: pointer;
+  }
+  .menu {
+    position: relative;
+    top: 100%;
+    right: 0;
+    width: 300px;
+    height: auto;
+    background-color: rgb(255, 217, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+  }
+  .menu.open {
+    display: flex;
+    animation: transformMenu 300ms ease-in-out forwards;
+  }
+  @keyframes transformMenu {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: initial;
+    }
+  }
+  ul {
+    flex-direction: column;
+  }
+  .article {
+    width: auto;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  .contactDiv p {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  #showReal img {
+    height: 90px;
+    width: 180px;
+  }
+  .article {
+    font-size: 15px;
+    text-align: center;
+  }
+  h3 {
+    font-size: 1rem;
+  }
+  #contact {
+    left: 0%;
+    transform: translate(0);
+    padding-left: 10px;
+  }
+  #realisations {
+    width: 100vw;
+    padding-left: 10px;
+  }
+  .contactDiv div {
+    display: block;
+  }
 }
