--- a/assets/scss/_outils.scss
+++ b/assets/scss/_outils.scss
@@ -10,23 +10,32 @@
 }
 
 .languages{
-    @include flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
     gap: 50px;
     position: relative;
     left: 50%;
     transform: translatex(-50%);
-    border: 2px solid #7D2323;
+    border: 2px solid #ffffff;
+    border-radius: 4rem;
     padding: 50px;
     width: auto;
-    box-shadow: #7D2323 5px 5px 5px 5px;
-
+    background-color: #e3e3e3;
+    font-weight: bold;
+    a{
+        color: #232323;
+    }
     a:nth-child(2n+1):hover{
         color: gold;
-        font-size: 2rem;
+        scale: 1.2;
+        transition: 0.35s;
     }
 
     a:hover{
-        color: #7D2323;
-        font-size: 2rem;
+        color: #7d2323;
+        scale: 1.2;
+        transition: 0.35s;
     }
 }
