--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,10 @@
 nav {
   background-color: gold;
   height: 80px;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100vw;
+  z-index: 5;
 }
 
 ul {
@@ -190,6 +192,15 @@ html {
   scroll-behavior: smooth;
 }
 
+a {
+  cursor: pointer;
+}
+
+h2 {
+  border-bottom: 2px solid #7d2323;
+  padding: 5px;
+}
+
 #profil {
   position: relative;
   left: 50%;
@@ -317,10 +328,10 @@ html {
   align-items: center;
   flex-direction: column;
   width: 500px;
-  gap: 10px;
+  gap: 20px;
   border: 2px solid #7d2323;
   margin: 25px;
-  padding: 25px;
+  padding: 20px;
   border-radius: 6px;
   box-shadow: 2px 2px 16px 2px #7d2323;
 }
